--- a/.config/vesktop/settings.json
+++ b/.config/vesktop/settings.json
@@ -7,5 +7,9 @@
     "staticTitle": true,
     "splashTheming": true,
     "tray": false,
-    "disableMinSize": true
+    "disableMinSize": true,
+    "spellCheckLanguages": [
+        "en-US",
+        "en"
+    ]
 }
