add nvim to path, generate waybar, kitty, and sway themes with wallust, force kitty to use wayland, remove single instance kitty, fix double random wallpaper, change wallust config for better cohesion, fix waybar icon spacing

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1509,7 +1509,7 @@ command_on_bell pw-play --latency 128 ~/.config/kitty/gunter_quack.mp3
 #: configuration will change this value only for newly created OS
 #: windows.
 
-# linux_display_server auto
+linux_display_server wayland 
 
 #: Choose between Wayland and X11 backends. By default, an appropriate
 #: backend based on the system state is chosen automatically. Set it
@@ -2245,5 +2245,5 @@ command_on_bell pw-play --latency 128 ~/.config/kitty/gunter_quack.mp3
 
 # BEGIN_KITTY_THEME
 # Dark Pride
-include current-theme.conf
+include kitty-colors.conf
 # END_KITTY_THEME
