fix sway border refresh, move tofi config fully to config file, fix tofi include

--- a/.config/kitty/kitty-colors.conf
+++ b/.config/kitty/kitty-colors.conf
@@ -1,32 +1,29 @@
-# /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
-# /* wallust template - colors-kitty */
+foreground         #E5D7B6
+background         #1A1817
+cursor             #E5D7B6
 
-foreground         #FCF7FC
-background         #221D20
-cursor             #FCF7FC
+active_tab_foreground     #1A1817
+active_tab_background     #E5D7B6
+inactive_tab_foreground   #E5D7B6
+inactive_tab_background   #1A1817
 
-active_tab_foreground     #221D20
-active_tab_background     #FCF7FC
-inactive_tab_foreground   #FCF7FC
-inactive_tab_background   #221D20
+active_border_color   #E5D7B6
+inactive_border_color #1A1817
+bell_border_color     #524A46
 
-active_border_color   #FCF7FC
-inactive_border_color #221D20
-bell_border_color     #75417C
-
-color0      #494347
-color1		#75417C
-color2		#7A437D
-color3		#A16C50
-color4		#BA5B8D
-color5		#BE5D8E
-color6		#B9AFB8
-color7		#F3ECF2
-color8		#AAA5A9
-color9		#9C57A5
-color10		#A259A7
-color11		#D7906B
-color12		#F87ABC
-color13		#FE7CBE
-color14		#F7E9F6
-color15		#F3ECF2
+color0      #454241
+color1		#524A46
+color2		#775D43
+color3		#7A5F43
+color4		#7D6244
+color5		#998050
+color6		#997E42
+color7		#D2BD8E
+color8		#938463
+color9		#5A504A
+color10		#8C6946
+color11		#906B46
+color12		#936F48
+color13		#A47926
+color14		#B68C2E
+color15		#D2BD8E
