fix random_bg selecting readme, fix tofi, change waybar to display workspaces on specific monitor, fix sway border selection

--- a/.config/kitty/kitty-colors.conf
+++ b/.config/kitty/kitty-colors.conf
@@ -1,29 +1,32 @@
-foreground         #E5D7B6
-background         #1A1817
-cursor             #E5D7B6
+# /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
+# /* wallust template - colors-kitty */
 
-active_tab_foreground     #1A1817
-active_tab_background     #E5D7B6
-inactive_tab_foreground   #E5D7B6
-inactive_tab_background   #1A1817
+foreground         #DBF8C8
+background         #000000
+cursor             #DBF8C8
 
-active_border_color   #E5D7B6
-inactive_border_color #1A1817
-bell_border_color     #524A46
+active_tab_foreground     #000000
+active_tab_background     #DBF8C8
+inactive_tab_foreground   #DBF8C8
+inactive_tab_background   #000000
 
-color0      #454241
-color1		#524A46
-color2		#775D43
-color3		#7A5F43
-color4		#7D6244
-color5		#998050
-color6		#997E42
-color7		#D2BD8E
-color8		#938463
-color9		#5A504A
-color10		#8C6946
-color11		#906B46
-color12		#936F48
-color13		#A47926
-color14		#B68C2E
-color15		#D2BD8E
+active_border_color   #DBF8C8
+inactive_border_color #000000
+bell_border_color     #6B7965
+
+color0      #000100
+color1		#6B7965
+color2		#5391AB
+color3		#5493A5
+color4		#5E9C86
+color5		#70AE50
+color6		#72B04A
+color7		#C3ECA8
+color8		#89A576
+color9		#698060
+color10		#6EC1E4
+color11		#71C4DC
+color12		#7ED0B3
+color13		#95E76A
+color14		#98EA62
+color15		#C3ECA8
