--- a/.config/kitty/kitty-colors.conf
+++ b/.config/kitty/kitty-colors.conf
@@ -1,32 +1,32 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # /* wallust template - colors-kitty */
 
-foreground         #DBF8C8
-background         #000000
-cursor             #DBF8C8
+foreground         #E5D0DD
+background         #1D1823
+cursor             #E5D0DD
 
-active_tab_foreground     #000000
-active_tab_background     #DBF8C8
-inactive_tab_foreground   #DBF8C8
-inactive_tab_background   #000000
+active_tab_foreground     #1D1823
+active_tab_background     #E5D0DD
+inactive_tab_foreground   #E5D0DD
+inactive_tab_background   #1D1823
 
-active_border_color   #DBF8C8
-inactive_border_color #000000
-bell_border_color     #6B7965
+active_border_color   #E5D0DD
+inactive_border_color #1D1823
+bell_border_color     #745267
 
-color0      #000100
-color1		#6B7965
-color2		#5391AB
-color3		#5493A5
-color4		#5E9C86
-color5		#70AE50
-color6		#72B04A
-color7		#C3ECA8
-color8		#89A576
-color9		#698060
-color10		#6EC1E4
-color11		#71C4DC
-color12		#7ED0B3
-color13		#95E76A
-color14		#98EA62
-color15		#C3ECA8
+color0      #494251
+color1		#745267
+color2		#9A4DB1
+color3		#778290
+color4		#7D8291
+color5		#9C7A90
+color6		#9E7A90
+color7		#D2B4C7
+color8		#937E8B
+color9		#885A76
+color10		#BA54D9
+color11		#79899F
+color12		#7A829B
+color13		#B17A9E
+color14		#B67A9F
+color15		#D2B4C7
