add wallpaper, switch to brightnessctl

--- a/.config/kitty/kitty-colors.conf
+++ b/.config/kitty/kitty-colors.conf
@@ -1,32 +1,32 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # /* wallust template - colors-kitty */
 
-foreground         #E5D0DD
-background         #1D1823
-cursor             #E5D0DD
+foreground         #DFFEFE
+background         #232321
+cursor             #DFFEFE
 
-active_tab_foreground     #1D1823
-active_tab_background     #E5D0DD
-inactive_tab_foreground   #E5D0DD
-inactive_tab_background   #1D1823
+active_tab_foreground     #232321
+active_tab_background     #DFFEFE
+inactive_tab_foreground   #DFFEFE
+inactive_tab_background   #232321
 
-active_border_color   #E5D0DD
-inactive_border_color #1D1823
-bell_border_color     #745267
+active_border_color   #DFFEFE
+inactive_border_color #232321
+bell_border_color     #58564E
 
-color0      #494251
-color1		#745267
-color2		#9A4DB1
-color3		#778290
-color4		#7D8291
-color5		#9C7A90
-color6		#9E7A90
-color7		#D2B4C7
-color8		#937E8B
-color9		#885A76
-color10		#BA54D9
-color11		#79899F
-color12		#7A829B
-color13		#B17A9E
-color14		#B67A9F
-color15		#D2B4C7
+color0      #4F4E4C
+color1		#58564E
+color2		#787562
+color3		#807A69
+color4		#938F6E
+color5		#938E6A
+color6		#7ABDBE
+color7		#C9F5F6
+color8		#8CACAC
+color9		#625F55
+color10		#8D896F
+color11		#938A71
+color12		#A49D67
+color13		#ACA56C
+color14		#A3FCFD
+color15		#C9F5F6
