--- a/.config/sway/config
+++ b/.config/sway/config
@@ -34,10 +34,8 @@
     bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5% 
     bindsym XF86AudioMute exec  pactl set-sink-mute @DEFAULT_SINK@ toggle 
 
-    #use light to change brightness of display
-    exec sudo light -N 5
-    bindsym XF86MonBrightnessUp exec sudo light -A 10
-    bindsym XF86MonBrightnessDown exec sudo light -U 10 
+    bindsym XF86MonBrightnessUp exec sudo brightnessctl s 5%+ 
+    bindsym XF86MonBrightnessDown exec sudo brightnessctl s 5%- 
 
     #multimedia keys
     bindsym XF86AudioPlay exec playerctl play-pause
