--- a/.config/kitty/kitty-colors.conf
+++ b/.config/kitty/kitty-colors.conf
@@ -1,32 +1,32 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # /* wallust template - colors-kitty */
 
-foreground         #DFFEFE
-background         #232321
-cursor             #DFFEFE
+foreground         #AEE6EB
+background         #0C0E0F
+cursor             #AEE6EB
 
-active_tab_foreground     #232321
-active_tab_background     #DFFEFE
-inactive_tab_foreground   #DFFEFE
-inactive_tab_background   #232321
+active_tab_foreground     #0C0E0F
+active_tab_background     #AEE6EB
+inactive_tab_foreground   #AEE6EB
+inactive_tab_background   #0C0E0F
 
-active_border_color   #DFFEFE
-inactive_border_color #232321
-bell_border_color     #58564E
+active_border_color   #AEE6EB
+inactive_border_color #0C0E0F
+bell_border_color     #616B4F
 
-color0      #4F4E4C
-color1		#58564E
-color2		#787562
-color3		#807A69
-color4		#938F6E
-color5		#938E6A
-color6		#7ABDBE
-color7		#C9F5F6
-color8		#8CACAC
-color9		#625F55
-color10		#8D896F
-color11		#938A71
-color12		#A49D67
-color13		#ACA56C
-color14		#A3FCFD
-color15		#C9F5F6
+color0      #37393A
+color1		#616B4F
+color2		#406F73
+color3		#3F7379
+color4		#728250
+color5		#31878E
+color6		#118A95
+color7		#83D3DA
+color8		#5B9499
+color9		#6E7B56
+color10		#428086
+color11		#41868E
+color12		#799144
+color13		#1399A5
+color14		#17B8C6
+color15		#83D3DA
