add gunter, remove wallust gens, start install script

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -618,7 +618,7 @@ sync_to_monitor yes
 #: Terminal bell {{{
 
 enable_audio_bell no
-command_on_bell pw-play --latency 128 ~/.config/kitty/gunter_quack.mp3
+command_on_bell pw-play --latency 128 --volume=.25 ~/.config/kitty/gunter_quack.mp3
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
