--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,10 +6,10 @@ Fonts {{{
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrainsMonoNL NFM 
-bold_font        JetBrainsMonoNL NFM  Bold
-italic_font      JetBrainsMonoNL NFM  Italic
-bold_italic_font JetBrainsMonoNL NFM Bold Italic
+font_family        PxPlusIBMVGA8 Nerd Font
+# bold_font        JetBrainsMonoNL NFM  Bold
+# italic_font      JetBrainsMonoNL NFM  Italic
+# bold_italic_font JetBrainsMonoNL NFM Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -24,7 +24,7 @@ bold_italic_font JetBrainsMonoNL NFM Bold Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 14.0
+font_size 20.0
 
 #: Font size (in pts)
 
@@ -618,7 +618,7 @@ sync_to_monitor yes
 #: Terminal bell {{{
 
 enable_audio_bell no
-command_on_bell pw-play --latency 128 --volume=.25 ~/.config/kitty/gunter_quack.mp3
+command_on_bell pw-play --latency 128 --volume=.05 ~/.config/kitty/gunter_quack.mp3
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
@@ -2244,6 +2244,5 @@ linux_display_server wayland
 
 
 # BEGIN_KITTY_THEME
-# Dark Pride
 include kitty-colors.conf
 # END_KITTY_THEME
